exports[`Container > BreadcrumbBar renders correctly for "/" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/agency/agency-2" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    Mock Agency
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/agency/agency-2/edit" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    Edit Agency
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/agency/agency-2/organization/create" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    Create Organization
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/agency/create" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    Create Agency
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/analysis/analysis-2" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    An Analysis
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/analysis/analysis-2/histogram" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/analysis/analysis-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        An Analysis
      </a>
    </Link>
  </li>
  <li>
    Histogram
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/analysis/analysis-2/individuals" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/analysis/analysis-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        An Analysis
      </a>
    </Link>
  </li>
  <li>
    Individuals
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/analysis/analysis-2/possibilities" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/analysis/analysis-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        An Analysis
      </a>
    </Link>
  </li>
  <li>
    Possibilities
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/commuter/commuter-2/edit" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/group/group-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Group
      </a>
    </Link>
  </li>
  <li>
    Edit Commuter
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/group/group-2" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    Mock Group
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/group/group-2/add" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/group/group-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Group
      </a>
    </Link>
  </li>
  <li>
    Add Commuters
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/group/group-2/commuter/create" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/group/group-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Group
      </a>
    </Link>
  </li>
  <li>
    Create Commuter
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/organization/organization-2" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    Mock Organization
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/organization/organization-2/analysis/create" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    Create Analysis
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/organization/organization-2/edit" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    Edit Organization
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/organization/organization-2/group/create" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    Create Group
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/organization/organization-2/site/create" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    Create Site
  </li>
</ol>
`;

exports[`Container > BreadcrumbBar renders correctly for "/site/site-2/edit" 1`] = `
<ol
  aria-label="breadcrumbs"
  className="breadcrumb"
  role="navigation">
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/">
      <a
        onClick={[Function]}
        style={Object {}}>
        Agencies
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/agency/agency-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Agency
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/organization/organization-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Mock Organization
      </a>
    </Link>
  </li>
  <li>
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to="/site/site-2">
      <a
        onClick={[Function]}
        style={Object {}}>
        Acme Corp
      </a>
    </Link>
  </li>
  <li>
    Edit Site
  </li>
</ol>
`;
